// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WordDefinition component -> full entry Matches snapshot 1`] = `
<article
  className="section"
>
  <header>
    <h1
      lang="non-swe"
    >
      Afköra
    </h1>
    <small
      className="subHeading"
    >
      Old Swedish Dictionary - 
      afköra
    </small>
    <p>
      Meaning of Old Swedish word 
      <em>
        "
        afköra
        "
      </em>
       in Swedish.
    </p>
    <p>
      As defined by K.F Söderwall's dictionary of Medieval Swedish:
    </p>
  </header>
  <dl
    className="definitionList"
  >
    <dt>
      <strong>
        afköra
      </strong>
    </dt>
    <dd
      dangerouslySetInnerHTML={
        {
          "__html": " , vräka. hafwi wald han afköra  <abbr title="Några Gambla Stadgar [såsom bihang till Biärköa-Rätten utg. af J. Hadorph]. 1687.">GS</abbr> 43 (1416?). af ty ahren (för areno) han landboen afkörer ib.",
        }
      }
      lang="swe"
    />
  </dl>
  <p>
    <strong>
      Part of speech:
    </strong>
     
    <em>
      vb
    </em>
  </p>
  <p>
    <strong>
      Grammatical aspect:
    </strong>
     
    <em>
      v.
    </em>
  </p>
  <strong>
    Alternative forms or notes:
  </strong>
  <ul
    className="list"
  >
    <li>
      -bortdrifva
    </li>
  </ul>
  <p>
    Possible runic inscription in 
    <em>
      Medieval Futhork
    </em>
    :
    <span
      className="rune"
    >
      ᛆᚠᚴᚯᚱᛆ
    </span>
    <br />
    <small>
      Medieval Runes were used in Sweden from 12th to 17th centuries.
    </small>
  </p>
  <div
    className="abbreviations"
  >
    <div
      className="column"
    >
      <h4>
        Works and authors cited:
      </h4>
      <dl
        className="wrap"
      >
        <dt
          className="abbreviation"
        >
          <strong>
            GS
          </strong>
        </dt>
        <dd
          className="explanation"
        >
          Några Gambla Stadgar [såsom bihang till Biärköa-Rätten utg. af J. Hadorph]. 1687.
        </dd>
      </dl>
    </div>
    <a
      className="link"
      href="/source-list"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      ➞ See all works cited in the dictionary
    </a>
  </div>
  <br />
  <h4>
    Also available in related dictionaries:
  </h4>
  <p>
    This headword also appears in dictionaries of other languages closely related to Old Swedish.
  </p>
  <ul
    className="list"
  >
    <li
      className="listItem"
    >
      <a
        href="https://cleasby-vigfusson-dictionary.vercel.app/word/fadir"
        rel="noopener noreferrer"
        target="_blank"
      >
        Old Norse - Cleasby & Vigfusson Dictionary
      </a>
    </li>
    <li
      className="listItem"
    >
      <a
        href="https://old-icelandic.vercel.app/word/fadir"
        rel="noopener noreferrer"
        target="_blank"
      >
        Old Icelandic - Geir Zoëga's Dictionary
      </a>
    </li>
    <li
      className="listItem"
    >
      <a
        href="https://old-norwegian-dictionary.vercel.app/word/fadir"
        rel="noopener noreferrer"
        target="_blank"
      >
        Old Norwegian - Johan Fritzner's Dictionary
      </a>
    </li>
  </ul>
</article>
`;

exports[`WordDefinition component -> minimal entry Matches snapshot 1`] = `
<article
  className="section"
>
  <header>
    <h1
      lang="non-swe"
    >
      Afköra
    </h1>
    <small
      className="subHeading"
    >
      Old Swedish Dictionary - 
      afköra
    </small>
    <p>
      Meaning of Old Swedish word 
      <em>
        "
        afköra
        "
      </em>
       in Swedish.
    </p>
    <p>
      As defined by K.F Söderwall's dictionary of Medieval Swedish:
    </p>
  </header>
  <dl
    className="definitionList"
  >
    <dt>
      <strong>
        afköra
      </strong>
    </dt>
    <dd
      dangerouslySetInnerHTML={
        {
          "__html": " , vräka. hafwi wald han afköra  <abbr title="Några Gambla Stadgar [såsom bihang till Biärköa-Rätten utg. af J. Hadorph]. 1687.">GS</abbr> 43 (1416?). af ty ahren (för areno) han landboen afkörer ib.",
        }
      }
      lang="swe"
    />
  </dl>
  <p>
    Possible runic inscription in 
    <em>
      Medieval Futhork
    </em>
    :
    <span
      className="rune"
    >
      ᛆᚠᚴᚯᚱᛆ
    </span>
    <br />
    <small>
      Medieval Runes were used in Sweden from 12th to 17th centuries.
    </small>
  </p>
  <div
    className="abbreviations"
  >
    <div
      className="column"
    >
      <h4>
        Works and authors cited:
      </h4>
      <dl
        className="wrap"
      >
        <dt
          className="abbreviation"
        >
          <strong>
            GS
          </strong>
        </dt>
        <dd
          className="explanation"
        >
          Några Gambla Stadgar [såsom bihang till Biärköa-Rätten utg. af J. Hadorph]. 1687.
        </dd>
      </dl>
    </div>
    <a
      className="link"
      href="/source-list"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      ➞ See all works cited in the dictionary
    </a>
  </div>
  <br />
  <h4>
    Also available in related dictionaries:
  </h4>
  <p>
    This headword also appears in dictionaries of other languages closely related to Old Swedish.
  </p>
  <ul
    className="list"
  >
    <li
      className="listItem"
    >
      <a
        href="https://cleasby-vigfusson-dictionary.vercel.app/word/fadir"
        rel="noopener noreferrer"
        target="_blank"
      >
        Old Norse - Cleasby & Vigfusson Dictionary
      </a>
    </li>
    <li
      className="listItem"
    >
      <a
        href="https://old-icelandic.vercel.app/word/fadir"
        rel="noopener noreferrer"
        target="_blank"
      >
        Old Icelandic - Geir Zoëga's Dictionary
      </a>
    </li>
    <li
      className="listItem"
    >
      <a
        href="https://old-norwegian-dictionary.vercel.app/word/fadir"
        rel="noopener noreferrer"
        target="_blank"
      >
        Old Norwegian - Johan Fritzner's Dictionary
      </a>
    </li>
  </ul>
</article>
`;
